<resources>
    <string name="app_name">Adevinta</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="business_name">RandomUser Inc.</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="show">Mostrar</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    //filters
    <string name="filter_user">Buscar usuario</string>

    <string name="text_name">por nombre</string>
    <string name="text_last">por apellido</string>
    <string name="text_email">por email</string>

    // Users
    <string name="user_phone">user phone</string>
    <string name="user_email">email</string>
    <string name="user_photo">photo</string>
    <string name="user_first_name">first name</string>
    <string name="user_last_name">last name</string>

    //user detail
    <string name="city">Ciudad</string>
    <string name="state">Provincia</string>
    <string name="address">Dirección</string>
    <string name="date_registered">Fecha registro</string>
    <string name="gender">Género</string>
    <string name="email">Email</string>
    <string name="gender_female">female</string>
    <string name="female">Mujer</string>
    <string name="male">Hombre</string>
</resources>