<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Users.AppBarOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorSecondaryVariant"
            app:popupTheme="@style/Theme.Users.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="65dp"
        android:text="@string/filter_user"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/appBarMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usersLayout"
        style="@style/Widget.AppCompat.SearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="1dp"
        android:minWidth="250dp"
        android:layout_marginHorizontal="30dp"
        app:endIconMode="custom"
        android:letterSpacing="0"
        android:textAlignment="center"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usersInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/text_name"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lastNameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        android:text="@string/filter_user"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/usersLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastLayout"
        style="@style/Widget.AppCompat.SearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0dp"
        android:minWidth="250dp"
        android:layout_marginHorizontal="30dp"
        app:endIconMode="custom"
        android:letterSpacing="0"
        android:textAlignment="center"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTitle"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="viewStart"
            android:hint="@string/text_last"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/emailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        android:text="@string/filter_user"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/lastLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Widget.AppCompat.SearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0dp"
        android:minWidth="250dp"
        android:layout_marginHorizontal="30dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:endIconMode="custom"
        android:letterSpacing="0"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/emailTitle"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="viewStart"
            android:hint="@string/text_email"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:inputType="text"
            android:maxLength="45"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUsersMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <include layout="@layout/content_main" />

</androidx.constraintlayout.widget.ConstraintLayout>